# data-commons-search

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yml  logging.dev.yml  logging.yml  pyproject.toml
.github/: release.sh  resetdb.sh
.github/workflows/: build.yml
scripts/: compute_stats.py  export_db_schema.py  search_playground.py  search_test.py  stress_test.py  stress_test_llm.py
src/data_commons_search/: __init__.py  auth.py  config.py  db.py  logging.py  main.py  mcp_server.py  models.py  online_embed.py  prompts.py  rate_limit.py  stats.json  stats.py  utils.py  vault.py
src/data_commons_search/webapp/: index.html
src/data_commons_search/webapp/assets/: index-9cMviAWv.js  index-BQb0bMJB.css
tests/: benchmark.py  conftest.py  stress_api.py  stress_llm.py  test_db.py  test_server.py
tests/security/: README.md  garak-report.txt  garak.yaml  garak_target.py
